core/services/chainlink: update invalid config test

--- a/core/services/chainlink/testdata/config-invalid.toml
+++ b/core/services/chainlink/testdata/config-invalid.toml
@@ -162,6 +162,12 @@ APIKey = 'key'
 [[Aptos]]
 Enabled = 1
 
+[[Aptos.Nodes]]
+Name = 'primary'
+
+[[Aptos.Nodes]]
+Name = 'primary'
+
 [OCR2]
 Enabled = true
 
