fix tests and some more refactoring

--- a/core/config/docs/chains-evm.toml
+++ b/core/config/docs/chains-evm.toml
@@ -269,7 +269,7 @@ OracleType = 'OP' # Example
 # OracleAddress is the address of the oracle contract.
 OracleAddress = '0x420000000000000000000000000000000000000F' # Example
 # CustomGasPriceAPICalldata is optional and can be set to call a custom gas price API at the given OracleAddress.
-CustomGasPriceAPICalldata = ''
+CustomGasPriceAPICalldata = '' # Default
 
 [EVM.GasEstimator.LimitJobType]
 # OCR overrides LimitDefault for OCR jobs.
